--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
+    "sass": "^1.85.0",
+    "scrollreveal": "^4.0.9",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
