--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.475.0",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
