--- a/vti_hotel_be/src/main/resources/application.properties
+++ b/vti_hotel_be/src/main/resources/application.properties
@@ -3,11 +3,27 @@ server.port=8080
 
 # DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/vti_hotel?createDatabaseIfNotExist=true
+
 spring.datasource.username=root
 spring.datasource.password=@Lehoang03022004
 spring.jpa.hibernate.ddl-auto=update
 
-## C?u hình Hibernate
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hoangleedz32@gmail.com
+spring.mail.password=onxx xyqx kzha qaqj
+
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.protocol=smtp
+
+# C?u hình Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
