--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
     "@react-icons/all-files": "^4.1.0",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "bootstrap": "^4.6.0",
@@ -24,7 +23,9 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.5",
     "scrollreveal": "^4.0.9",
     "toastify": "^2.0.1"
   },
