--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "bootstrap": "^4.6.0",
+    "firebase": "^11.4.0",
     "jquery": "^3.7.1",
     "lucide-react": "^0.475.0",
     "popper.js": "^1.16.1",
